--- a/simplelivestreaming.html
+++ b/simplelivestreaming.html
@@ -36,8 +36,8 @@
 
   const config = {
     credential: {
-      serviceId: '발급 받은 Service Id를 입력',
-      key: '발급 받은 Service Key를 입력'
+      serviceId: 'd56741d8-7336-47e5-8f77-4ee1a9b75850',
+      key: '86c5fe98eb61a5b5aa516fc279ef67eb06631c55d6d0e5fbc75de38d841c16e'
     },
     view: {
       local: '#localVideo'
